refactor : Lotto 생성을 PassiveLottoFactory에서 하도록 변경